Fix spacing

--- a/packages/@uppy/core/src/_common.scss
+++ b/packages/@uppy/core/src/_common.scss
@@ -177,7 +177,7 @@
 }
 
   .uppy-size--md .uppy-c-btn-link {
-    padding: 13px 15px;
+    padding: 13px 18px;
   }
 
   .uppy-c-btn-link:hover {
